manifests/beszel/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: beszel
  labels:
    name: beszel
